Fixed styling to make site look better on mobile

--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -58,7 +58,6 @@ body {
 }
 
 .login-grid {
-    margin-top: 4em;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
@@ -209,7 +208,8 @@ span.clickable {
 
 .center-self {
     margin: auto;
-    width: 30vw;
+    width: 45ch;
+    padding: 3ch;
 }
 
 .center-children {
